--- a/modulo 04/aula04/exercicio/pokemon.css
+++ b/modulo 04/aula04/exercicio/pokemon.css
@@ -85,14 +85,22 @@ body{
 		border: 3px solid;;
 	}
 
+	.row .conteudo-item1{
+		padding-top: 15px;	
+		text-align: left;
+		font-weight: bold;
+	}
 
-	@media screen and (max-width: 991px){
+	.row .conteudo-item2{		
+		padding-top: 13px;
+		font-weight: bold;
+	}
+
+@media screen and (max-width: 991px){
 		.conteudo {
 	    width: 70%;
 			margin-left: 13%;
 			margin-top: 30px;
 	}
 
-  	.row .conteudo-item2{
-			text-align: left;
-		}
+  	
