--- a/modulo06/aula03/Chat/FrontEnd/css/estilo.css
+++ b/modulo06/aula03/Chat/FrontEnd/css/estilo.css
@@ -3,6 +3,10 @@
     padding: 0px;
 }
 
+.borda{
+    border: 2px solid;
+}
+
 
 body{
     background: url("imagens/bkg-body.jpg") no-repeat;    
@@ -20,10 +24,60 @@ body{
     
 }
 
+.campo-login{
+    background-color: rgba(0, 0, 0, 0.9);
+    height: auto;
+    margin-top: 40%;
+    border-radius: 10px;        
+}
+
+    .campo-login form legend{
+        color: white;
+        text-align: center;
+    }
+
+    .campo-login label{
+        color: white;
+    }
+
+    .campo-login input{
+        text-align: center;
+        width: 100%;
+    }
+
+    .campo-login .botao-iniciar{        
+        text-decoration: none;
+        font-size: 18px;
+        font-weight: bold;        
+        text-align: center;
+        color: black;
+        background: white;
+        height: 30px;
+        width: 100px;
+        margin: 15px auto;
+        border-radius: 5px;
+    }
+
+        .campo-login .botao-iniciar:hover{
+            background: gray;
+            color: white;            
+        }
+
+        .campo-login .botao-iniciar a{            
+            text-decoration: none;                       
+            position: relative;
+            top: 10%;
+            transform: translateY(-50%);
+        }
+
+         .campo-login .botao-iniciar a:hover{            
+            color: white;
+        }
+
 .chat{
     background: black;
     background-color: rgba(0, 0, 0, 0.8);
-    height: 800px;
+    height: 700px;
     width: 90%;
     border-radius: 10px;
     position: relative;
@@ -59,12 +113,40 @@ body{
 
 .btn{    
     margin: 0px 15px;
-    height: 80px;  
+    height: 40px;  
     width: 100%;    
 }
 
 .mensagem .form-control{    
     float: left;            
-    height: 80px;
+    height: 40px;
     width: 100%;
+}
+
+.texto-box{
+    margin: 15px;
+    width: 100%;
+    min-height: 100px;
+}
+.foto img{
+    height: 90px;
+    width: auto;
+    border-radius: 50%;
+}
+
+.texto-box .texto{         
+    background-color: rgba(0, 0, 0, 0.9);       
+    height: 80px;    
+    border: 0px solid black;
+    border-radius: 0px 20px 0px 20px;    
+}
+
+.texto-box .texto:before {
+  content: "";
+  border: 10px solid transparent;
+  border-top: 10px solid rgba(0, 0, 0, 0.9);
+  border-right: 10px solid rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 0;
+  left: -20px;
 }
