--- a/modulo06/aula05/FrontEnd/template/home.html
+++ b/modulo06/aula05/FrontEnd/template/home.html
@@ -1,24 +1,34 @@
-<div class="col-md-10 col-md-offset-1 livros">                
-<div class="row">
-    <div class="col-md-3 livro borda">
-        <div class="row titulo borda"> Games Of Thrones </div>
-        <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
-        <div class="row descricao borda">descricao</div>
-    </div>
-    <div class="col-md-3 livro borda">
-        <div class="row titulo borda"> Games Of Thrones </div>
-        <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
-        <div class="row descricao borda">descricao</div>
-    </div>
-    <div class="col-md-3 livro borda">
-        <div class="row titulo borda"> Games Of Thrones </div>
-        <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
-        <div class="row descricao borda">descricao</div>
-    </div>
-    <div class="col-md-3 livro borda">
-        <div class="row titulo borda"> Games Of Thrones </div>
-        <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
-        <div class="row descricao borda">descricao</div>
-    </div>
-</div>                    
+<div class="col-md-12 lancamentos borda" ng-class="{'lancamentos-aberto': estaFechado }"> 
+    <div ng-click="lancamentosAberto(estaFechado)"> mostrar tudo </div>
+    <div class="col-md-3 livros-lancamento borda"></div>
+    <div class="col-md-3 livros-lancamento borda"></div>
+    <div class="col-md-3 livros-lancamento borda"></div>
+    <div class="col-md-3 livros-lancamento borda"></div> 
+    <div class="col-md-3 livros-lancamento borda"></div>            
+ </div> 
+<div class="corpo ">
+    <div class="col-md-10 col-md-offset-2 livros">                
+    <div class="row">
+        <div class="col-md-3 livro borda">
+            <div class="row titulo borda"> Games Of Thrones </div>
+            <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
+            <div class="row descricao borda">descricao</div>
+        </div>
+        <div class="col-md-3 livro borda">
+            <div class="row titulo borda"> Games Of Thrones </div>
+            <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
+            <div class="row descricao borda">descricao</div>
+        </div>
+        <div class="col-md-3 livro borda">
+            <div class="row titulo borda"> Games Of Thrones </div>
+            <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
+            <div class="row descricao borda">descricao</div>
+        </div>
+        <div class="col-md-3 livro borda">
+            <div class="row titulo borda"> Games Of Thrones </div>
+            <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
+            <div class="row descricao borda">descricao</div>
+        </div>
+    </div>                    
+    </div>  
 </div>
