--- a/modulo06/aula05/FrontEnd/template/home.html
+++ b/modulo06/aula05/FrontEnd/template/home.html
@@ -1,10 +1,13 @@
 <div class="col-md-12 lancamentos borda" ng-class="{'lancamentos-aberto': estaFechado }"> 
-    <div ng-click="lancamentosAberto(estaFechado)"> mostrar tudo </div>
+    <div class="abrir-fechar-lancamentos" ng-click="lancamentosAberto(estaFechado)"> mostrar/fechar </div>
     <div class="col-md-3 livros-lancamento borda"></div>
     <div class="col-md-3 livros-lancamento borda"></div>
     <div class="col-md-3 livros-lancamento borda"></div>
     <div class="col-md-3 livros-lancamento borda"></div> 
-    <div class="col-md-3 livros-lancamento borda"></div>            
+    <div class="col-md-3 livros-lancamento borda"></div>      
+    <div class="row">
+        <div class="col-md-12 abrir-fechar-lancamentos" ng-click="lancamentosAberto(estaFechado)"> Fechar </div> 
+    </div>     
  </div> 
 <div class="corpo ">
     <div class="col-md-10 col-md-offset-2 livros">                
