--- a/modulo06/aula05/FrontEnd/template/home.html
+++ b/modulo06/aula05/FrontEnd/template/home.html
@@ -1,10 +1,9 @@
 <div class="col-md-12 lancamentos borda" ng-class="{'lancamentos-aberto': estaFechado }"> 
     <div class="abrir-fechar-lancamentos" ng-click="lancamentosAberto(estaFechado)"> mostrar/fechar </div>
-    <div class="col-md-3 livros-lancamento borda"></div>
-    <div class="col-md-3 livros-lancamento borda"></div>
-    <div class="col-md-3 livros-lancamento borda"></div>
-    <div class="col-md-3 livros-lancamento borda"></div> 
-    <div class="col-md-3 livros-lancamento borda"></div>      
+    <div class="col-md-3 livros-lancamento borda" ng-repeat="lancamento in lancamentos">
+        <div>{{lancamento.Titulo}}</div>
+        <img ng-src="{{lancamento.Capa}}">  
+    </div>         
     <div class="row">
         <div class="col-md-12 abrir-fechar-lancamentos" ng-click="lancamentosAberto(estaFechado)"> Fechar </div> 
     </div>     
@@ -12,25 +11,10 @@
 <div class="corpo ">
     <div class="col-md-10 col-md-offset-2 livros">                
     <div class="row">
-        <div class="col-md-3 livro borda">
-            <div class="row titulo borda"> Games Of Thrones </div>
-            <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
-            <div class="row descricao borda">descricao</div>
-        </div>
-        <div class="col-md-3 livro borda">
-            <div class="row titulo borda"> Games Of Thrones </div>
-            <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
-            <div class="row descricao borda">descricao</div>
-        </div>
-        <div class="col-md-3 livro borda">
-            <div class="row titulo borda"> Games Of Thrones </div>
-            <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
-            <div class="row descricao borda">descricao</div>
-        </div>
-        <div class="col-md-3 livro borda">
-            <div class="row titulo borda"> Games Of Thrones </div>
-            <div class="row imagem borda"><img src="http://smellslikerock.net/wp-content/uploads/2013/03/Got.jpg"></div>
-            <div class="row descricao borda">descricao</div>
+        <div class="col-md-3 livro borda" ng-repeat="livro in livros">
+            <div class="row titulo borda"> <h4>{{livro.Titulo}}</h4> </div>
+            <div class="row imagem borda"><img ng-src="{{livro.Capa}}"></div>
+            <div class="row descricao borda">{{livro.Descricao}}</div>
         </div>
     </div>                    
     </div>  
