--- a/modulo06/aula05/FrontEnd/template/home.html
+++ b/modulo06/aula05/FrontEnd/template/home.html
@@ -1,6 +1,8 @@
-<div class="col-md-12 lancamentos borda" ng-class="{'lancamentos-aberto': estaFechado }"> 
-    <div class="abrir-fechar-lancamentos" ng-click="lancamentosAberto(estaFechado)"> mostrar/fechar </div>
-    <div class="col-md-3 livros-lancamento borda" ng-repeat="lancamento in lancamentos">
+<div class="col-md-12 lancamentos borda" ng-class="{'lancamentos-aberto': estaFechado }" ng-init="lancamentos()"> 
+    <div class="row">
+        <div class="abrir-fechar-lancamentos" ng-click="lancamentosAberto(estaFechado)"> mostrar todos lancamentos </div>
+    </div>
+    <div class="col-md-3 livros-lancamento" ng-repeat="lancamento in lancamentos">
         <div>{{lancamento.Titulo}}</div>
         <img ng-src="{{lancamento.Capa}}">  
     </div>         
@@ -9,13 +11,36 @@
     </div>     
  </div> 
 <div class="corpo ">
-    <div class="col-md-10 col-md-offset-2 livros">                
+    <div class="col-md-12 livros" ng-init="buscar(1)">                
     <div class="row">
-        <div class="col-md-3 livro borda" ng-repeat="livro in livros">
-            <div class="row titulo borda"> <h4>{{livro.Titulo}}</h4> </div>
-            <div class="row imagem borda"><img ng-src="{{livro.Capa}}"></div>
-            <div class="row descricao borda">{{livro.Descricao}}</div>
+        <div class="col-md-3 livro" ng-repeat="livro in livros">
+            <div class="row titulo"> <h4>{{livro.Titulo}}</h4> </div>
+            <div class="row imagem"><img ng-src="{{livro.Capa}}"></div>
+            <div class="row descricao">{{livro.Descricao}}</div>
         </div>
     </div>                    
     </div>  
+</div>
+<div class="row paginacao">
+    <div class="col-md-4 col-md-offset-4">
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li>
+                <a href="" aria-label="Previous" ng-click="VoltarPagina()">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+                </li>
+                <li><a href="" ng-click="buscar(1)">1</a></li>
+                <li><a href="" ng-click="buscar(2)">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li>
+                <a href="" aria-label="Next"  ng-click="ProximaPagina()">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </div>
