--- a/modulo06/TrabalhoLocacao/template/login.html
+++ b/modulo06/TrabalhoLocacao/template/login.html
@@ -1,4 +1,10 @@
-<form>
-    
-        
-</form>
+<div class="col-md-7 col-md-offset-2 formulario-login">
+    <form class="form-group">
+        <legend>Login</legend>
+        <label> Usuario </label>
+        <input type="text"  class="form-control">
+        <label> Senha </label>
+        <input type="text"  class="form-control">
+        <input type="button" class="btn btn-success botao-login" value="logar">
+    </form>
+</div>
