--- a/modulo06/TrabalhoLocacao/template/vendas.html
+++ b/modulo06/TrabalhoLocacao/template/vendas.html
@@ -32,5 +32,6 @@
         <div class="col-md-4 col-md-offset-4 valo-total"> 
             Valor Total : {{valorTotal(novaLocacao.Adicional,novaLocacao.Pacote.Preco)}}
         </div> 
+        {{novaLocacao.Adicional}}
      </form>     
 </div>
