feat(exerciciosEmAula): anotacoes e exercicios feitos em aula.

--- a/modulo06/TrabalhoLocacao/css/estilo.css
+++ b/modulo06/TrabalhoLocacao/css/estilo.css
@@ -14,7 +14,7 @@
     font-weight: bold;
     font-size: 58px;
     font-family: 'Vibur', cursive;
-    text-shadow: 2px -2px lime;    
+    text-shadow: 2px -2px blue;    
 }
 
     .menu-global span{
