--- a/modulo08/RedeSocial/FrontEnd/css/estilo.css
+++ b/modulo08/RedeSocial/FrontEnd/css/estilo.css
@@ -11,6 +11,7 @@ body{
 
 .navegacao{
     position: fixed;
+    top: 0px;
     height: 80px;
     width: 100vw;
     background:rgba(0,0,0,0.8);
@@ -21,6 +22,6 @@ body{
     color: yellow;  
     font-family: 'Frijole', cursive;  
     font-size: 48px;  
-    margin-top: 5px;
+    margin-top: 10px;
     text-shadow: 4px 2px black;  
 }
