feat(modulo08RedeSocial): implementar interface da tela de cadastro

--- a/modulo08/RedeSocial/FrontEnd/css/cadastro.css
+++ b/modulo08/RedeSocial/FrontEnd/css/cadastro.css
@@ -5,6 +5,11 @@
     color: yellow;
 }
 
+.container .tela-cadastro{
+    margin-top: -40px;
+    height: 540px;
+}
+
 .cadastro{    
     margin-top: 20px;    
 }
