--- a/modulo08/RedeSocial/FrontEnd/template/cadastro.html
+++ b/modulo08/RedeSocial/FrontEnd/template/cadastro.html
@@ -1,17 +1,19 @@
-<form>
-    <br>
-    <legend>Cadastro</legend>
-    <div class="cadastro nome"><label>Nome</label></div>
-    <input class="form-control" type="text" placeholder="Joao da silva" autofocus>
-    <div class="cadastro email"><label>E-mail</label></div>
-    <input class="form-control" type="text" placeholder="Teste@mail.com">
-    <div class="cadastro senha"><label>Senha</label></div>
-    <input class="form-control" type="password" placeholder="123456">
-    <div class="cadastro"><label>Data Nascimento</label></div>
-    <input class="form-control" type="date">
-    <div class="cadastro"> <label> sexo </label></div>
-    <select class="form-control"></select>
-    <div class="botao-login">
-        <input type="button" class="btn btn-primary btn-login" value="Cadastrar">
-    </div>
-</form>
+<div class="col-md-4 col-md-offset-4 login tela-cadastro">
+    <form>
+        <br>
+        <legend>Cadastro</legend>
+        <div class="cadastro nome"><label>Nome</label></div>
+        <input class="form-control" type="text" placeholder="Joao da silva" autofocus>
+        <div class="cadastro email"><label>E-mail</label></div>
+        <input class="form-control" type="text" placeholder="Teste@mail.com">
+        <div class="cadastro senha"><label>Senha</label></div>
+        <input class="form-control" type="password" placeholder="123456">
+        <div class="cadastro"><label>Data Nascimento</label></div>
+        <input class="form-control" type="date">
+        <div class="cadastro"> <label> sexo </label></div>
+        <select class="form-control"></select>
+        <div class="botao-login">
+            <input type="button" class="btn btn-primary btn-login" value="Cadastrar">
+        </div>
+    </form>
+</div>
