--- a/modulo08/RedeSocial/FrontEnd/template/login.html
+++ b/modulo08/RedeSocial/FrontEnd/template/login.html
@@ -10,7 +10,7 @@
             <input type="button" class="btn btn-primary btn-login" value="Logar">
         </div>
         <div class="cadastrar">
-            <a href="#"> cadastrar </a>
+            <a href="#!/cadastro"> cadastrar </a>
         </div>
     </form>
 </div>
