--- a/modulo08/RedeSocial/FrontEnd/template/login.html
+++ b/modulo08/RedeSocial/FrontEnd/template/login.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 col-md-offset-4 login">
+<div class="col-md-4 col-md-offset-4 login fadeIn">
     <form>
         <div class="usuario-login">
             <label>Usuario</label>
