--- a/modulo08/RedeSocial/FrontEnd/template/cadastro.html
+++ b/modulo08/RedeSocial/FrontEnd/template/cadastro.html
@@ -1,27 +1,36 @@
-<div class="col-md-4 col-md-offset-4 login tela-cadastro fadeIn">
-    <form name="CadastroForm" ng-submit="Cadastrar(usuario)" novalidate>
-        <br>
-        <legend>Cadastro</legend>
-        <div class="cadastro nome"><label>Nome</label></div>
-        <input class="form-control" type="text" placeholder="Joao da silva" autofocus  ng-model="usuario.nome" required >
-        
-        <div class="cadastro email"><label>E-mail</label></div>
-        <input class="form-control" type="text" placeholder="Teste@mail.com" ng-model="usuario.email" required>
-        
-        <div class="cadastro senha"><label>Senha</label></div>
-        <input class="form-control" type="password" placeholder="123456"  ng-model="usuario.senha" required>
-        
-        <div class="cadastro"><label>Data Nascimento</label></div>
-        <input class="form-control" type="date" ng-model="usuario.dataNascimento" required>
-        
-        <div class="cadastro" > <label> sexo </label></div>
-        <select class="form-control" ng-model="usuario.sexo">
+<div class="navegacao">
+    <nav class="fadeIn">
+        <a href="#!/login">
+            <h1>Plus Ultra!!!</h1>
+        </a>
+    </nav>
+</div>
+<div class="container">
+    <div class="col-md-4 col-md-offset-4 login tela-cadastro fadeIn">
+        <form name="CadastroForm" ng-submit="Cadastrar(usuario)" novalidate>
+            <br>
+            <legend>Cadastro</legend>
+            <div class="cadastro nome"><label>Nome</label></div>
+            <input class="form-control" type="text" placeholder="Joao da silva" autofocus ng-model="usuario.nome" required>
+
+            <div class="cadastro email"><label>E-mail</label></div>
+            <input class="form-control" type="text" placeholder="Teste@mail.com" ng-model="usuario.email" required>
+
+            <div class="cadastro senha"><label>Senha</label></div>
+            <input class="form-control" type="password" placeholder="123456" ng-model="usuario.senha" required>
+
+            <div class="cadastro"><label>Data Nascimento</label></div>
+            <input class="form-control" type="date" ng-model="usuario.dataNascimento" required>
+
+            <div class="cadastro"> <label> sexo </label></div>
+            <select class="form-control" ng-model="usuario.sexo">
             <option ng-value="M"> Masculino</option>
             <option ng-value="F"> Feminino </option>
         </select>
-        
-        <div class="botao-login">
-            <input type="submit" class="btn btn-primary btn-login" value="Cadastrar" ng-disabled="CadastroForm.$invalid">
-        </div>                        
-    </form>
+
+            <div class="botao-login">
+                <input type="submit" class="btn btn-primary btn-login" value="Cadastrar" ng-disabled="CadastroForm.$invalid">
+            </div>
+        </form>
+    </div>
 </div>
