--- a/modulo08/RedeSocial/FrontEnd/template/login.html
+++ b/modulo08/RedeSocial/FrontEnd/template/login.html
@@ -1,16 +1,25 @@
-<div class="col-md-4 col-md-offset-4 login fadeIn">
-    <form>
-        <div class="usuario-login">
-            <label>Usuario</label>
-        </div>
-        <input class="form-control" type="text" placeholder="Nome de Usuario" autofocus>
-        <div class="senha-login">Senha</div>
-        <input class="form-control" type="text" placeholder="Senha">
-        <div class="botao-login">
-            <input type="button" class="btn btn-primary btn-login" value="Logar">
-        </div>
-        <div class="cadastrar">
-            <a href="#!/cadastro"> cadastrar </a>
-        </div>
-    </form>
+<div class="navegacao">
+    <nav class="fadeIn">
+        <a href="#!/login">
+            <h1>Plus Ultra!!!</h1>
+        </a>
+    </nav>
+</div>
+<div class="container">
+    <div class="col-md-4 col-md-offset-4 login fadeIn">
+        <form>
+            <div class="usuario-login">
+                <label>Usuario</label>
+            </div>
+            <input class="form-control" type="text" placeholder="Nome de Usuario" autofocus>
+            <div class="senha-login">Senha</div>
+            <input class="form-control" type="text" placeholder="Senha">
+            <div class="botao-login">
+                <input type="button" class="btn btn-primary btn-login" value="Logar">
+            </div>
+            <div class="cadastrar">
+                <a href="#!/cadastro"> cadastrar </a>
+            </div>
+        </form>
+    </div>
 </div>
